# pystoms

./: .gitignore  README.md  pyproject.toml  setup.cfg
docbuild/doctrees/: environment.pickle
docbuild/doctrees/pystoms/: GLM.doctree  synthetics.doctree
docbuild/html/: .buildinfo
docbuild/html/auto_examples/: index.html
docbuild/html/pystoms/: DDAFeatureLoader.html  googleTest.html
docs/: Makefile  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/pystoms/: DDAFeatureLoader.md.txt  GLM.md.txt  models.md.txt  synthetics.md.txt  utilities.md.txt
docs/auto_examples/: index.html
docs/doctrees/: index.doctree
docs/doctrees/auto_examples/: index.doctree
docs/doctrees/pystoms/: DDAFeatureLoader.doctree  clustering.doctree  googleTest.doctree  models.doctree  utilities.doctree
docs/examples/: README.md
docs/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html
docs/html/_sources/: index.md.txt
docs/html/pystoms/: GLM.html  models.html  utilities.html
docs/pystoms/: DDAFeatureLoader.html  GLM.html  clustering.html  googleTest.html  models.html  synthetics.html  utilities.html
docs/source/: conf.py  index.md
docs/source/auto_examples/: index.rst
docs/source/pystoms/: DDAFeatureLoader.md
docs/source/weekReport/: model_1_0_eval.py  model_eval.py
docs/weekReport/week10/: week10.html
docs/weekReport/week9/: week9.html  (+1 more)
docs_src/: Makefile
docs_src/source/: conf.py  index.md
examples/: feature_evaluation.ipynb  minimal_model.ipynb  pickling.py  synthetics.ipynb
pipelines/pipe_A/: dvc.yaml  params.yaml
scripts/evaluation/: model_eval.py
scripts/runtime/: runtime_eval.py  test_runtime.py
src/: model_comparison.py
src/archive/: aligned_feature_data.py  model_comparison.py
src/pystoms/: FeatureLoaderDDA.py  aligned_feature_data.py  clustering.py  featureLoaderDDA.py  feature_loader_dda.py  model_comparison.py  models.py  modelsGLM.py  models_glm.py  plotting.py  synthetics.py  utilities.py
tests/: test_aligned_feature_data.py  test_synthetics.py
(+47 files in other folders)
