[metadata]
name = pystoms
version = 0.0.1
author = Tim Maier
author_email = tmaier01@students.uni-mainz.de
description = A library for bayesian analysis of peptide LC-MS/MS data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
