[metadata]
name = pystoms
version = 0.1
author = Tim Maier
author_email = tmaier01@students.uni-mainz.de
description = A library for bayesian analysis of peptide LC-MS/MS data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    xarray >= 2022.3
    pandas >= 1.4.2
    numpy >= 1.23.1
    proteolizarddata >= 0.1
    proteolizardalgo >= 0.1
    arviz >= 0.12.1
    pymc >= 4.1.4
    aesara >= 2.6.4
    seaborn
    matplotlib
    plotly
[options.packages.find]
where = src
