[metadata]
name = pystoms
version = 0.1
author = Tim Maier
author_email = tmaier01@students.uni-mainz.de
description = A library for bayesian analysis of peptide LC-MS/MS data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    proteolizarddata ~= 0.1
    proteolizardalgo ~= 0.1
    pymc >= 5.0.0
    seaborn ~= 0.12
    plotly ~= 5.11
[options.packages.find]
where = src
